fix: update body text color in _reset.scss to use primary color for better visibility

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -16,7 +16,7 @@
 body {
   font-family: $font-primary;
   background-color: $color-background;
-  color: $color-text;
+  color: $color-primary;
   @include flex-center;
   min-height: 100vh;
   width: 100vw;
